[#847] test(scim): SCIM service provisioning integration tests (#848)
### What changes were proposed in this pull request?

- Add `ScimProvisioningRESTApiIT` in `plugins/scim/service` for
end-to-end SCIM 2.0 provisioning on the Jersey 3 auxiliary listener
(port **9201**): health, metadata, user/group CRUD, filter, PATCH, and
validation
- Add standalone IT harness (`ScimServiceITEnvironment`,
`ScimEmbeddedAuxServer`, `ScimITJdbcSupport`) that does **not** extend
`BaseIT`, so the test JVM keeps Jersey 2 for MiniGravitino while SCIMple
loads from isolated `scim-server/libs`
- Add Gradle `integrationTest` source set for `:plugins:scim:service`,
extension `testArtifacts`, and `scim-service-test` CI workflow (h2 /
MySQL / PostgreSQL)
- Harden extension token admin IT: `ScimPlaceholderAuxService`,
`ScimTokenITServerSupport`, and shared `ScimEnterpriseSchemaInitializer`
- Minor production fixes required for IT correctness:
`ScimRequestPaths.fromRequest()`, Jackson JSON provider registration,
and `ScimMetalakeResource` sub-resource initialization

Fix: #847

### Why are the changes needed?

#800 delivered the SCIM auxiliary HTTP stack on port 9201, but the
service module lacked integration tests that exercise real SCIMple
provisioning against h2, MySQL, and PostgreSQL. Token admin IT (#835)
runs on the main Jersey 2 server and cannot start the real Jersey 3 SCIM
listener in-process due to classpath conflicts; this subtask adds a
dedicated harness and provisioning IT coverage for the auxiliary
listener.

### Does this PR introduce _any_ user-facing change?

1. Minor HTTP routing fixes (`ScimRequestPaths.fromRequest()`, Jackson
provider, sub-resource init) that improve correctness under embedded
Jetty; no API contract changes
2. No new configuration keys or REST endpoints

### How was this patch tested?

- `./gradlew :plugins:scim:service:test -PskipITs`
- `./gradlew :plugins:scim:service:integrationTest -PjdbcBackend=h2
-PskipDockerTests=false`
- `./gradlew :plugins:scim:test