@@ -5,9 +5,11 @@
 
 package com.datastrato.gravitino.scim.service.web;
 
+import jakarta.servlet.http.HttpServletRequest;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import org.apache.commons.lang3.StringUtils;
 
 /** Parses metalake scope from SCIM auxiliary HTTP paths on port 9201. */
 public final class ScimRequestPaths {
@@ -24,13 +26,28 @@ public final class ScimRequestPaths {
   private ScimRequestPaths() {}
 
   /**
+   * Returns the full request path for SCIM routing under Jetty.
+   *
+   * <p>The Jersey servlet and filters are mapped to {@link #SCIM_SPEC}. For {@code GET
+   * /scim/v2/metalakes/ml1/Users}, Jetty exposes {@code servletPath=/scim} and {@code
+   * pathInfo=/v2/metalakes/ml1/Users}; this method joins them for filter routing.
+   *
+   * @param request incoming HTTP request
+   * @return normalized path such as {@code /scim/v2/metalakes/ml1/Users}
+   */
+  public static String resolveRequestPath(HttpServletRequest request) {
+    return StringUtils.removeEnd(StringUtils.defaultString(request.getServletPath()), "/")
+        + StringUtils.defaultString(request.getPathInfo());
+  }
+
+  /**
    * Returns the metalake name encoded in a SCIM request path.
    *
    * @param requestPath servlet path (for example {@code /scim/v2/metalakes/ml1/Users})
    * @return metalake name when the path is metalake-scoped
    */
   public static Optional<String> metalakeFromPath(String requestPath) {
-    if (requestPath == null || requestPath.isBlank()) {
+    if (StringUtils.isBlank(requestPath)) {
       return Optional.empty();
     }
     Matcher matcher = METALAKE_PATH.matcher(requestPath);
@@ -47,6 +64,6 @@ public final class ScimRequestPaths {
    * @return {@code true} when bearer auth and URL scope resolution apply
    */
   public static boolean isMetalakeScopedPath(String requestPath) {
-    return requestPath != null && requestPath.startsWith(METALAKE_SCIM_PREFIX);
+    return StringUtils.startsWith(requestPath, METALAKE_SCIM_PREFIX);
   }
 }
